fix alignment of banner

--- a/patent.css
+++ b/patent.css
@@ -200,7 +200,7 @@ body {
 
 /* --- 1. TOP BANNER --- */
 .hero-banner {
-    margin-top: 80px;
+    margin-top: 65px;
     width: 100%;
     height: 250px;
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
